workshop04/weather-istio.yaml
---
kind: Gateway
apiVersion: networking.istio.io/v1alpha3

metadata:
  name: weather-gw
  namespace: weatherns
  labels:
    app: weather-app

spec:
  selector:
    istio: ingressgateway
  servers:
   - port: 
      number: 80
      name: http
      protocol: HTTP
     hosts:
     - "*"

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3

metadata:
  name: weather-vs
  namespace: weatherns
  labels:
    app: weather-app

spec:
  gateways:
  - weather-gw
  hosts:
  - '*'
  http:
  - match:
    - uri:
      prefix: /
    route:
    - destination: 
        host: weather-svc.weatherns.svc.cluster.local
  - route:
    - destination:
        host: fortune-svc.weatherns.svc.cluster.local
