workshop04/weather-with-sidecar.yaml
---
kind: Namespace
apiVersion: v1

metadata:
  name: weatherns
  labels:
    app: weather-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: weather-app
  name: weather-deploy
  namespace: weatherns
spec:
  replicas: 2
  selector:
    matchLabels:
      name: weather-pod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/interceptionMode: REDIRECT
        sidecar.istio.io/status: '{"version":"610f2b5742375d30d7f484e296fd022086a4c611b5a6b136bcf0758767fefecc","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
        traffic.sidecar.istio.io/excludeInboundPorts: "15020"
        traffic.sidecar.istio.io/includeInboundPorts: "3000"
        traffic.sidecar.istio.io/includeOutboundIPRanges: '*'
      creationTimestamp: null
      labels:
        app: weather-app
        name: weather-pod
      name: weather-pod
    spec:
      containers:
      - env:
        - name: APP_ID
          valueFrom:
            secretKeyRef:
              key: app_id
              name: weather-secret
        image: stackupiss/weather:v1
        imagePullPolicy: Always
        name: weather
        ports:
        - containerPort: 3000
          name: weather-port
        resources:
          requests:
            cpu: 100m
            memory: 150M
      - args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - weather-app.$(POD_NAMESPACE)
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15010
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --dnsRefreshRate
        - 300s
        - --connectTimeout
        - 10s
        - --proxyAdminPort
        - "15000"
        - --concurrency
        - "2"
        - --controlPlaneAuthPolicy
        - NONE
        - --statusPort
        - "15020"
        - --applicationPorts
        - "3000"
        image: docker.io/istio/proxyv2:1.3.0-rc.3
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15020
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
kind: Service
apiVersion: v1

metadata:
  name: weather-svc
  namespace: weatherns
  labels:
    app: weather-app

spec:
  type: ClusterIP
  selector:
    name: weather-pod
  ports:
    - port: 3000
      targetPort: weather-port

---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1

metadata:
  name: weather-ing
  namespace: weatherns
  labels:
    app: weather-app

spec:
  rules:
  - host: weather.oneminutedistraction88.com
    http:
      paths:
      - path: /
        backend:
          serviceName: weather-svc
          servicePort: 3000
---
