workshop04/weather.yaml
---
kind: Namespace
apiVersion: v1

metadata:
  name: weatherns
  labels:
    app: weather-app

---
kind: Deployment
apiVersion: apps/v1

metadata:
  name: weather-deploy
  namespace: weatherns
  labels:
    app: weather-app

spec:
  replicas: 2
  selector:
    matchLabels:
      name: weather-pod

  template:
    metadata:
      name: weather-pod
      labels:
        app: weather-app
        name: weather-pod

    spec:
      containers:
        - name: weather
          image: stackupiss/weather:v1
          imagePullPolicy: Always
          ports:
            - name: weather-port
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 150M
#            limits:
#              cpu: 150m
#              memory: 640M
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

---
kind: Service
apiVersion: v1

metadata:
  name: weather-svc
  namespace: weatherns
  labels:
    app: weather-app

spec:
  type: ClusterIP
  selector:
    name: weather-pod
  ports:
    - port: 3000
      targetPort: weather-port

---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1

metadata:
  name: weather-ing
  namespace: weatherns
  labels:
    app: weather-app

spec:
  rules:
  - host: weather.oneminutedistraction88.com
    http:
      paths:
      - path: /
        backend:
          serviceName: weather-svc
          servicePort: 3000
